fix #has-l10n .on-plank overflow

--- a/assets/css/component/menu.css
+++ b/assets/css/component/menu.css
@@ -320,6 +320,8 @@ a#has-i18n:active > .alt {
     border: var(--border);
     background: var(--bg);
     width: auto;
+    max-width: calc(100% - var(--void) - var(--void));
+    white-space: wrap;
 }
 
 #main-footer a::after,
